[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
serde_json = "1.0.132"
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"]}
uuid={version = "1.11.0", features = ["v4"]}
lambda_http = "0.13.0"
aws-config = "1.1.8"
aws-sdk-dynamodb = "1.18.0"
aws_lambda_events = { version = "0.15.0", default-features = false, features = [
    "eventbridge",
] }
tokio = { version = "1", features = ["macros"] }
serde = { version = "1.0.214", features = ["derive"] }

